Limit update types

--- a/renovate.json5
+++ b/renovate.json5
@@ -4,6 +4,7 @@
     {
       matchManagers: ['npm'],
       matchPackageNames: ['apollo-server-plugin-base', 'apollo-server-types'],
+      matchUpdateTypes: ['major', 'minor', 'patch'],
 
       groupName: 'apollo-server monorepo',
     },
