--- a/package.json
+++ b/package.json
@@ -1,11 +1,4 @@
 {
-  "dependencies": {
-    "apollo-datasource": "3.3.0",
-    "apollo-datasource-rest": "3.5.0",
-    "apollo-server-env": "4.2.0",
-    "apollo-server-koa": "3.6.1",
-    "apollo-server-plugin-base": "3.5.0",
-    "apollo-server-types": "3.5.0"
-  },
+  "dependencies": {},
   "description": "Renovate testbed"
 }
