--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,3 @@
 configs:
   plugins:
-    - &docker-ecr-cache
-      seek-oss/docker-ecr-cache#v1.9.0
-    - &docker
-      docker#v3.7.0
+    - seek-jobs/gantry#v1.5.2
