--- a/renovate.json5
+++ b/renovate.json5
@@ -1,6 +1,177 @@
 {
-  extends: ['github>seek-oss/rynovate'],
+  extends: [
+    ':dependencyDashboard',
+    ':prHourlyLimit4',
+    ':prNotPending',
+    ':rebaseStalePrs',
+    ':renovatePrefix',
+    ':semanticCommits',
+    ':timezone(Australia/Melbourne)',
+    'preview:buildkite',
+    'preview:dockerCompose',
+    'docker:disableMajor',
+    'group:monorepos',
+  ],
+  lockFileMaintenance: {
+    enabled: true,
+  },
   packageRules: [
+    {
+      matchManagers: ['buildkite', 'gomod', 'npm', 'nvm'],
+
+      commitMessageExtra: '{{newValue}}',
+      commitMessageTopic: '{{depName}}',
+    },
+    {
+      matchManagers: ['gomod'],
+
+      digest: {
+        commitMessageExtra: '',
+        groupName: 'gomod digests',
+        schedule: 'after 3:00 am and before 6:00 am on the first day of the month',
+      },
+      semanticCommitType: 'fix',
+    },
+    {
+      matchDepTypes: ['dependencies'],
+      matchManagers: ['npm'],
+
+      semanticCommitType: 'fix',
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['@types/node'],
+      matchUpdateTypes: ['major'],
+
+      enabled: false,
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['eslint'],
+
+      allowedVersions: '< 8',
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['aws-sdk-mock'],
+
+      allowedVersions: '!/^5.5.0$/',
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['@types/faker', 'faker'],
+
+      allowedVersions: '< 6',
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackagePatterns: ['^@types/'],
+      matchUpdateTypes: ['major', 'minor', 'patch'],
+
+      automerge: true,
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackagePatterns: ['^@types/'],
+      matchUpdateTypes: ['major', 'minor', 'patch'],
+
+      commitMessageExtra: '',
+      groupName: 'npm definitely typed',
+      prPriority: 99,
+      recreateClosed: true,
+      schedule: 'before 3:00 am every 2 weeks on Tuesday',
+    },
+    {
+      excludePackageNames: ['aws-sdk', 'braid-design-system', 'sku', 'skuba'],
+      excludePackagePatterns: [
+        '^@?seek',
+        'seek$',
+        '^@aws-sdk/',
+        '^@types/',
+        '^@vanilla-extract/',
+      ],
+      matchDepTypes: ['devDependencies'],
+      matchManagers: ['npm'],
+      matchUpdateTypes: ['major', 'minor', 'patch'],
+
+      commitMessageExtra: '',
+      groupName: 'npm dev dependencies',
+      recreateClosed: true,
+      schedule: 'after 3:00 am and before 6:00 am every 2 weeks on Tuesday',
+    },
+    {
+      excludePackageNames: ['braid-design-system', 'sku', 'skuba'],
+      excludePackagePatterns: [
+        '^@?seek',
+        'seek$',
+        '^@types/',
+        '^@vanilla-extract/',
+      ],
+      matchDepTypes: ['peerDependencies'],
+      matchManagers: ['npm'],
+      matchUpdateTypes: ['major', 'minor', 'patch'],
+
+      commitMessageExtra: '',
+      groupName: 'npm peer dependencies',
+      recreateClosed: true,
+      schedule: 'after 3:00 am and before 6:00 am every 2 weeks on Tuesday',
+    },
+    {
+      excludePackagePatterns: ['^seek-jobs/', '^seek-oss/'],
+      matchManagers: ['buildkite'],
+
+      additionalBranchPrefix: '',
+      commitMessageExtra: '',
+      groupName: 'buildkite plugins',
+      recreateClosed: true,
+      schedule: 'after 3:00 am and before 6:00 am every 2 weeks on Wednesday',
+    },
+    {
+      matchManagers: ['buildkite'],
+      matchPackagePatterns: ['^seek-jobs/', '^seek-oss/'],
+
+      stabilityDays: 0,
+      updateNotScheduled: true,
+    },
+    {
+      matchManagers: ['buildkite'],
+      matchPackageNames: ['seek-jobs/gantry'],
+
+      schedule: 'before 6:00 pm every weekday',
+    },
+    {
+      matchManagers: ['docker-compose', 'dockerfile'],
+
+      commitMessageExtra: '',
+      group: {
+        commitMessageTopic: '{{groupName}}',
+      },
+      groupName: 'docker images',
+      recreateClosed: true,
+      schedule: 'after 3:00 am and before 6:00 am every 2 weeks on Wednesday',
+    },
+    {
+      matchPackageNames: ['braid-design-system', 'sku', 'skuba'],
+      matchPackagePatterns: ['^@?seek', 'seek$', '^@vanilla-extract/'],
+
+      prPriority: 98,
+      schedule: 'after 3:00 am and before 6:00 am every weekday',
+      stabilityDays: 0,
+      updateNotScheduled: true,
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['aws-sdk'],
+      matchPackagePatterns: ['^@aws-sdk/'],
+      matchUpdateTypes: ['major', 'minor', 'patch'],
+
+      commitMessageExtra: '',
+      groupName: 'aws-sdk',
+      recreateClosed: true,
+      schedule: 'after 3:00 am and before 6:00 am on the first day of the month',
+      stabilityDays: 0,
+      updateNotScheduled: true,
+    },
     {
       matchManagers: ['npm'],
       matchPackageNames: ['apollo-server-plugin-base', 'apollo-server-types'],
@@ -8,5 +179,91 @@
 
       groupName: 'apollo-server monorepo',
     },
+    {
+      matchDepTypes: ['devDependencies'],
+      matchManagers: ['npm'],
+      matchPackageNames: [
+        '@seek/backoffice-access',
+        '@seek/candidate-data-contracts',
+        '@seek/ie-shared-types',
+        '@seek/indie-cardib-types',
+      ],
+
+      automerge: true,
+      stabilityDays: 0,
+      updateNotScheduled: true,
+    },
+    {
+      matchDepTypes: ['devDependencies'],
+      matchManagers: ['npm'],
+      matchPackageNames: [
+        '@seek/backoffice-access',
+        '@seek/candidate-data-contracts',
+        '@seek/ie-shared-types',
+        '@seek/indie-cardib-types',
+      ],
+
+      schedule: 'before 3:00 am every weekday',
+      stabilityDays: 0,
+      updateNotScheduled: true,
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['sku', 'skuba'],
+      matchUpdateTypes: ['patch'],
+
+      automerge: true,
+      stabilityDays: 0,
+      updateNotScheduled: true,
+    },
+    {
+      matchManagers: ['npm'],
+      matchPackageNames: ['@seek/indie-api-types', '@seek/indie-mocks'],
+      matchUpdateTypes: ['minor', 'patch'],
+
+      automerge: true,
+      schedule: 'before 3:00 am every weekday',
+      stabilityDays: 0,
+      updateNotScheduled: true,
+    },
+    {
+      matchPackageNames: ['react-relay'],
+      matchPackagePatterns: ['^relay-'],
+
+      groupName: 'relay',
+      recreateClosed: true,
+    },
+    {
+      matchUpdateTypes: ['lockFileMaintenance'],
+
+      automerge: true,
+    },
+    {
+      matchUpdateTypes: ['lockFileMaintenance'],
+
+      prPriority: 99,
+      schedule: 'before 3:00 am every 2 weeks on Wednesday',
+    },
+    {
+      matchUpdateTypes: ['pin'],
+
+      automerge: true,
+    },
+    {
+      matchUpdateTypes: ['pin'],
+
+      prPriority: 99,
+      schedule: 'before 3:00 am every weekday',
+    },
   ],
+  commitMessageAction: '',
+  postUpdateOptions: ['yarnDedupeHighest'],
+  prConcurrentLimit: 3,
+  prNotPendingHours: 1,
+  rangeStrategy: 'auto',
+  schedule: 'after 3:00 am and before 6:00 am on Monday and Friday',
+  semanticCommitScope: '',
+  semanticCommitType: 'deps',
+  stabilityDays: 3,
+  updateNotScheduled: false,
 }
