--- a/renovate.json5
+++ b/renovate.json5
@@ -127,19 +127,6 @@
       schedule: 'after 3:00 am and before 6:00 am every 2 weeks on Wednesday',
     },
     {
-      matchManagers: ['buildkite'],
-      matchPackagePatterns: ['^seek-jobs/', '^seek-oss/'],
-
-      stabilityDays: 0,
-      updateNotScheduled: true,
-    },
-    {
-      matchManagers: ['buildkite'],
-      matchPackageNames: ['seek-jobs/gantry'],
-
-      schedule: 'before 6:00 pm every weekday',
-    },
-    {
       matchManagers: ['docker-compose', 'dockerfile'],
 
       commitMessageExtra: '',
@@ -151,6 +138,7 @@
       schedule: 'after 3:00 am and before 6:00 am every 2 weeks on Wednesday',
     },
     {
+      matchManagers: ['npm'],
       matchPackageNames: ['braid-design-system', 'sku', 'skuba'],
       matchPackagePatterns: ['^@?seek', 'seek$', '^@vanilla-extract/'],
 
@@ -158,6 +146,20 @@
       schedule: 'after 3:00 am and before 6:00 am every weekday',
       stabilityDays: 0,
       updateNotScheduled: true,
+    },
+    {
+      matchManagers: ['buildkite'],
+      matchPackagePatterns: ['^seek-jobs/', '^seek-oss/'],
+
+      prPriority: 98,
+      stabilityDays: 0,
+      updateNotScheduled: true,
+    },
+    {
+      matchManagers: ['buildkite'],
+      matchPackageNames: ['seek-jobs/gantry'],
+
+      schedule: 'after 3:00 am and before 6:00 pm every weekday',
     },
     {
       matchManagers: ['npm'],
