--- a/renovate.json5
+++ b/renovate.json5
@@ -1,7 +1,6 @@
 {
   extends: [
     ':dependencyDashboard',
-    ':prHourlyLimit4',
     ':prNotPending',
     ':rebaseStalePrs',
     ':renovatePrefix',
@@ -89,6 +88,7 @@
         '^@aws-sdk/',
         '^@types/',
         '^@vanilla-extract/',
+        '^serverless',
       ],
       matchDepTypes: ['devDependencies'],
       matchManagers: ['npm'],
@@ -138,10 +138,10 @@
       schedule: 'after 3:00 am and before 6:00 am every 2 weeks on Wednesday',
     },
     {
-      matchManagers: ['npm'],
       matchPackageNames: ['braid-design-system', 'sku', 'skuba'],
       matchPackagePatterns: ['^@?seek', 'seek$', '^@vanilla-extract/'],
 
+      prCreation: 'immediate',
       prPriority: 98,
       schedule: 'after 3:00 am and before 6:00 am every weekday',
       stabilityDays: 0,
@@ -149,17 +149,12 @@
     },
     {
       matchManagers: ['buildkite'],
-      matchPackagePatterns: ['^seek-jobs/', '^seek-oss/'],
-
-      prPriority: 98,
-      stabilityDays: 0,
-      updateNotScheduled: true,
-    },
-    {
-      matchManagers: ['buildkite'],
       matchPackageNames: ['seek-jobs/gantry'],
 
-      schedule: 'after 3:00 am and before 6:00 pm every weekday',
+      prCreation: 'immediate',
+      schedule: 'after 3:00 am and before 5:00 pm every weekday',
+      stabilityDays: 0,
+      updateNotScheduled: true,
     },
     {
       matchManagers: ['npm'],
@@ -169,6 +164,7 @@
 
       commitMessageExtra: '',
       groupName: 'aws-sdk',
+      prCreation: 'immediate',
       recreateClosed: true,
       schedule: 'after 3:00 am and before 6:00 am on the first day of the month',
       stabilityDays: 0,
@@ -186,12 +182,15 @@
       matchManagers: ['npm'],
       matchPackageNames: [
         '@seek/backoffice-access',
+        '@seek/ca-graphql-schema',
         '@seek/candidate-data-contracts',
+        '@seek/hirer-jobs-types',
         '@seek/ie-shared-types',
         '@seek/indie-cardib-types',
       ],
 
       automerge: true,
+      prCreation: 'immediate',
       stabilityDays: 0,
       updateNotScheduled: true,
     },
@@ -200,14 +199,14 @@
       matchManagers: ['npm'],
       matchPackageNames: [
         '@seek/backoffice-access',
+        '@seek/ca-graphql-schema',
         '@seek/candidate-data-contracts',
+        '@seek/hirer-jobs-types',
         '@seek/ie-shared-types',
         '@seek/indie-cardib-types',
       ],
 
       schedule: 'before 3:00 am every weekday',
-      stabilityDays: 0,
-      updateNotScheduled: true,
     },
     {
       matchManagers: ['npm'],
@@ -215,6 +214,7 @@
       matchUpdateTypes: ['patch'],
 
       automerge: true,
+      prCreation: 'immediate',
       stabilityDays: 0,
       updateNotScheduled: true,
     },
@@ -224,6 +224,7 @@
       matchUpdateTypes: ['minor', 'patch'],
 
       automerge: true,
+      prCreation: 'immediate',
       schedule: 'before 3:00 am every weekday',
       stabilityDays: 0,
       updateNotScheduled: true,
@@ -258,6 +259,7 @@
       schedule: 'before 3:00 am every weekday',
     },
   ],
+  branchConcurrentLimit: 12,
   commitMessageAction: '',
   postUpdateOptions: ['yarnDedupeHighest'],
   prConcurrentLimit: 3,
