--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {},
   "devDependencies": {
+    "chance": "1.1.7",
+    "nock": "13.2.8",
     "serverless": "3.0.0",
-    "serverless-plugin-datadog": "5.7.1"
+    "serverless-plugin-datadog": "5.7.0"
   },
   "description": "Renovate testbed"
 }
